add skeleton alert manager
